-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.13.1, 5.15
GUI elements are supposed to use QAccessible::notifyAccessibilityUpdate when accessibility-relevant attributes of the UI changed. This allows accessibility tools to update their data structures accordingly.
On Android, this function is not implemented; qandroidplatformaccessibility.cpp reads:
void QAndroidPlatformAccessibility::notifyAccessibilityUpdate(QAccessibleEvent */*event*/) { // FIXME send events }
- relates to
-
QTBUG-95764 pure virtual call in QAccessibleQuickItem
-
- Closed
-
-
QTBUG-77320 QAccessible::isActive on Android incorrectly returns false
-
- Closed
-